unpackaged/main/default/objects/Family_Medical_History_Condition__c/Family_Medical_History_Condition__c.object-meta.xml
<CustomObject>
    <label>Family Medical History Condition</label>
    <nameField>
        <displayFormat>FMHC-{0000}</displayFormat>
        <label>Family Medical History Condition Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Family Medical History Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>