unpackaged/main/default/objects/Family_Medical_History_Condition__c/fields/Age_at_diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Age_at_diagnosis__c</fullName>
    <label>Age at diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Age_Range</valueSetName>
    </valueSet>
</CustomField>