unpackaged/main/default/objects/Family_Medical_History_Condition__c/fields/Condition_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Condition_Sub_Category__c</fullName>
    <label>Condition Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Condition_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Condition_Sub_Category</valueSetName>
    </valueSet>
</CustomField>