unpackaged/main/default/objects/Family_Medical_History_Condition__c/fields/Family_Medical_History__c.field-meta.xml
<CustomField>
    <fullName>Family_Medical_History__c</fullName>
    <label>Family Medical History</label>
    <referenceTo>Patient_Contact__c</referenceTo>
    <relationshipLabel>Family Medical History Conditions</relationshipLabel>
    <relationshipName>Family_Medical_History_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>