unpackaged/main/default/objects/Family_Medical_History_Condition__c/fields/NLM_Condition__c.field-meta.xml
<CustomField>
    <fullName>NLM_Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NLM Condition</label>
    <referenceTo>NLM_Condition__c</referenceTo>
    <relationshipLabel>Family Medical History Conditions</relationshipLabel>
    <relationshipName>Family_Medical_History_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>